syntax = "proto3";

package pb;

import "_required.proto";


//The Hello service definition.
service Hello {
    rpc SayHi (SayHiRequest) returns (SayHiReply);
}

message SayHiRequest {
    BaseReq base_req = 1;
    string name = 2;
}

message SayHiReply {
    BaseReq base_rsp = 2;
    string reply = 1;
}

